# zipstream

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml
example/: main.cpp
inc/zipstream/: builder.hpp  stream_i.hpp  zipstream.hpp
src/zipstream/: buffer.cpp  buffer.hpp  builder.cpp  crc32sum.cpp  crc32sum.hpp  entry.hpp  entry_i.hpp  entry_type.hpp  stream.cpp  stream.hpp
src/zipstream/entries/: dir_entry.cpp  dir_entry.hpp  file_entry.cpp  file_entry.hpp  static_file_entry.cpp  static_file_entry.hpp
test-src/: test_buffer.cpp  test_crc32sum.cpp
tools/: read_zip.cpp
